mod: got readme file headings ready, added heading in html and styled, new: created new dir for readme file

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/media_queries.css" type="text/css" />
 
-    <title>Milestone Project 2</title>
+    <title>My Local(s) MS2</title>
 </head>
 
 <body>
 
-    <header></header>
+    <header>
+        <h1 id="main-site-heading" class="col-12">my local(s)</h1>
+    </header>
 
     <nav></nav>
 
-    <main>
-        <h1>My Milestone 2 Project</h1>
-    </main>
+    <main></main>
 
     <footer></footer>
 
