mod: changed project idea,  mod: made changes to html and css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!--Delaring Doctype and language-->
 <!DOCTYPE html>
 <html lang="en">
+<!--Delaring Doctype and language above-->
 
 <head>
     <!--Specifying character encoding for website and viewport for responsiveness-->
@@ -11,18 +11,22 @@
     <!--Font Awesome v5.15.1 CDN-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <!--Hover.css v2.3.1 CDN-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover.css" integrity="sha512-Qg72y9f1a3aVc1FVnjq5YURLOOG8fDKQjMnhxYaZgBz4nIVjpVOBUtuMMMqkZPS1FlVrzzEBXq2sM6Qp1zen/Q==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
     <!--My CSS file links-->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/media_queries.css" type="text/css" />
 
-    <title>My Local(s) MS2</title>
+    <title>I Know Someone MS2</title>
 </head>
 
 <body>
 
     <header>
-        <h1 id="main-site-heading" class="col-12">my local(s)</h1>
+        <div class="row">
+            <div class="col-12 main-site-heading">
+                <h1>&quot;I Know Someone.&quot;</h1>
+            </div>
+        </div>
     </header>
 
     <nav></nav>
