new: local and contact page created, mod: new bg color chosen

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <div class="row">
             <div class="col-12 main-site-heading">
-                <h1>&quot;I Know Someone.&quot;</h1>
+                <h1>&quot;Hey, I Know Someone&quot;</h1>
             </div>
         </div>
     </header>
