mod: finished nav bar, styled it and media queries done

--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg bg-light navbar-light sticky-top">
+        <!--Main Site Header-->
+        <a class="main-heading navbar-brand" href="index.html">"Hey, I Know Someone"</a>
 
-    <nav class="main-nav navbar navbar-expand-md navbar-light sticky-top">
-        <div class="col col-lg-6 main-site-heading">
-            <h1><a href="index.html">&quot;Hey, I Know Someone&quot;</a></h1>
-        </div>
+        <!--Toggle Button/ Navbar Collapse-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
+
+        <!--Navigation links-->
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
