--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="dark-btn" onclick="darkTheme()" href="#">Dark Mode<br> Off</a>
+                </li>
             </ul>
         </div>
     </nav>
