--- a/index.html
+++ b/index.html
@@ -48,9 +48,48 @@
         </div>
     </nav>
 
-    <main></main>
+    <main>
+        <div class="container-fluid main-con">
+            <div class="row">
+                <div class="col-lg-4">col 1</div>
+                <div class="col-lg-4">col 2</div>
+                <div class="col-lg-4">col 3</div>
+            </div>
+        </div>
 
-    <footer></footer>
+    </main>
+
+    <footer>
+        <div class="container-fluid footer-con">
+            <div class="row">
+                <div class="col-lg-12 to-top-copy">
+                    <h5 id="to-top"><a href="#" onclick="backToTop()">back to top <i class="fas fa-arrow-up" aria-hidden="true"></i></a></h5>
+
+                    <div class="row">
+                        <div class="col-lg-6 quick-links">
+                            <h5 id="quick-links-heading">quick links</h5>
+                            <h6><a href="locals.html">Local Search <i class="fas fa-search" aria-hidden="true"></i></a></h6>
+                            <h6><a href="contact.html">Contact Me <i class="fas fa-envelope" aria-hidden="true"></i></a></h6>
+                        </div>
+
+
+                        <div class="col-lg-6 social-logos">
+                            <span id="social_icons">
+                                <a href="https://www.facebook.com/" target="_blank" class="foot-fb"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
+
+                                <a href="https://www.twitter.com/" target="_blank" class="foot-twitter"><i class="fab fa-twitter-square" aria-hidden="true"></i></a>
+
+                                <a href="https://www.linkedin.com/" target="_blank" class="foot-linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                            </span>
+                        </div>
+                    </div>
+
+                    <h6 id="copy"><a href="https://ifti-khan.github.io/ifti-khan-milestone-project-1/" target="_blank">&copy;ifti khan 2020</a></h6>
+                </div>
+            </div>
+        </div>
+
+    </footer>
 
 </body>
 
