--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <!--Toggle Button/ Navbar Collapse-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"><i class="fas fa-bars menu-icon"></i></span>
         </button>
 
         <!--Navigation links-->
