--- a/index.html
+++ b/index.html
@@ -12,19 +12,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <!--Hover.css v2.3.1 CDN-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
-    <!--My CSS file links-->
+    <!--My CSS Files-->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/media_queries.css" type="text/css" />
 
-    <title>Hey, I Know Someone MS2</title>
+    <title>HIKS Homepage</title>
 </head>
 
 <body>
+    <!--This block of code below is for the Bootstrap collapsable Navigation bar, which contains the websites main heading, nav bar and dark theme mode. I have left the default bootstrap classes in place so save code space, readability and also because they are called in the bootstrap JS file. I have manipulated this block of code to my liking with my own style in the style.css and media queries file-->
+
+    <!--Bootstrap Collapsable Navigation Bar-->
     <nav class="navbar navbar-expand-lg bg-light navbar-light sticky-top">
         <!--Main Site Header-->
         <a class="main-heading navbar-brand" href="index.html">"Hey, I Know Someone"</a>
 
-        <!--Toggle Button/ Navbar Collapse-->
+        <!--Toggle Button/ Navigation Bar Collapse is being called from the Bootstrap JS file using the data attribute-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars menu-icon"></i></span>
         </button>
@@ -41,13 +44,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
+
+                <!--This list item is for my dark theme mode and is linked to my JS file. So if a user clicks on the list item it will change the body colour to a darker colour and also change the button from default to dark mode on and off if clicked again-->
                 <li class="nav-item">
                     <a class="nav-link" id="dark-btn" onclick="darkTheme()" href="#">Dark Mode<br> Off</a>
                 </li>
+
             </ul>
         </div>
     </nav>
 
+    <!--This block of code below is for the main section of my html and i used the bootstrap grid sytem to create a fluid container, then a row and last the columns that i needed-->
     <main>
         <div class="container-fluid main-con">
             <div class="row">
@@ -59,20 +66,23 @@
 
     </main>
 
+    <!--This block of code is for the footer section of my html file, i used the bootstrap grid system to help create a rown then the columns i needed. They contains quick link to other pages, social icons linked to there websites and a copyright to me which is also a link to my personal portfolio and two empty columns to help with spacing and positioning-->
     <footer>
         <div class="container-fluid footer-con">
-
             <div class="row">
+
+                <!--Quick Links Column-->
                 <div class="col-lg-3 quick-links">
                     <h5 id="quick-links-heading">quick links</h5>
                     <h6 id="localsearch-link"><a href="locals.html">Local Search <i class="fas fa-search" aria-hidden="true"></i></a></h6>
                     <h6 id="contactme-link"><a href="contact.html">Contact Me <i class="fas fa-envelope" aria-hidden="true"></i></a></h6>
                 </div>
 
+                <!--Two Empty Space Columns-->
                 <div class="col-lg-3 empty-space"></div>
                 <div class="col-lg-3 empty-space"></div>
 
-
+                <!--Social Links Column-->
                 <div class="col-lg-3 social-logos">
                     <span id="social_icons">
                         <a href="https://www.facebook.com/" target="_blank" class="foot-fb"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
@@ -83,25 +93,30 @@
                     </span>
                 </div>
             </div>
+
+            <!--Copyright Column-->
             <div class="row">
                 <div class="col-lg-12 copyright">
                     <h6 id="copy"><a href="https://ifti-khan.github.io/ifti-khan-milestone-project-1/" target="_blank">&copy;ifti khan 2020</a></h6>
                 </div>
             </div>
         </div>
-
     </footer>
 
-    <!-- Back to top button -->
+    <!--This line of code below is for the back to top button. when a user scrolls down if will appear in the bottom right just above the footer. I achieved this by a mix of html, css and javascript-->
+
+    <!--Back to top button-->
     <a id="to-top-btn"><i class="fas fa-angle-double-up" aria-hidden="true"></i></a>
 
 </body>
+
+<!--Here below you will find all of my Javascript files, here i have linked the most recent JQuery via URL, Bootstrap JS via URL and my own Javascript file which is stored in my js directory in the assets folder-->
 
 <!--JQuery v3.5.1 script-->
 <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 <!--Bootstrap JS-->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<!--My JS file link-->
+<!--My JS File-->
 <script src="assets/js/script.js"></script>
 
 </html>
