--- a/locals.html
+++ b/locals.html
@@ -24,8 +24,8 @@
 
     <!--Bootstrap Collapsable Navigation Bar-->
     <nav class="navbar navbar-expand-lg bg-light navbar-light sticky-top">
-        <!--Main Site Header-->
-        <a class="main-heading navbar-brand" href="index.html">"Hey, I Know Someone"</a>
+        <!--Main Site Header with link to homepage-->
+        <a class="main-heading navbar-brand hvr-sweep-to-top hvr-pulse" href="index.html">"Hey, I Know Someone"</a>
 
         <!--Toggle Button/ Navigation Bar Collapse is being called from the Bootstrap JS file using the data attribute-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -36,18 +36,18 @@
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link hvr-sweep-to-top hvr-pulse" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active-nav" href="locals.html">Locals</a>
+                    <a class="nav-link active-nav hvr-sweep-to-top hvr-pulse" href="locals.html">Locals</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link hvr-sweep-to-top hvr-pulse" href="contact.html">Contact</a>
                 </li>
 
                 <!--This list item is for my dark theme mode and is linked to my JS file. So if a user clicks on the list item it will change the body colour to a darker colour and also change the button from default to dark mode on and off if clicked again-->
                 <li class="nav-item">
-                    <a class="nav-link" id="dark-btn" onclick="darkTheme()" href="#">Dark Mode<br> Off</a>
+                    <a class="nav-link hvr-sweep-to-top hvr-pulse" id="dark-btn" onclick="darkTheme()" href="#">Dark Mode<br> Off</a>
                 </li>
 
             </ul>
@@ -75,8 +75,8 @@
                 <!--Quick Links Column-->
                 <div class="col-lg-3 quick-links">
                     <h5 id="quick-links-heading">quick links</h5>
-                    <h6 id="localsearch-link"><a href="locals.html">Local Search <i class="fas fa-search" aria-hidden="true"></i></a></h6>
-                    <h6 id="contactme-link"><a href="contact.html">Contact Me <i class="fas fa-envelope" aria-hidden="true"></i></a></h6>
+                    <h6 id="localsearch-link"><a href="locals.html" class="hvr-sweep-to-top hvr-pulse">Local Search <i class="fas fa-search" aria-hidden="true"></i></a></h6>
+                    <h6 id="contactme-link"><a href="contact.html" class="hvr-sweep-to-top hvr-pulse">Contact Me <i class="fas fa-envelope" aria-hidden="true"></i></a></h6>
                 </div>
 
                 <!--Two Empty Space Columns-->
@@ -86,11 +86,11 @@
                 <!--Social Links Column-->
                 <div class="col-lg-3 social-logos">
                     <span id="social_icons">
-                        <a href="https://www.facebook.com/" target="_blank" class="foot-fb"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank" class="foot-fb hvr-pulse"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
 
-                        <a href="https://www.twitter.com/" target="_blank" class="foot-twitter"><i class="fab fa-twitter-square" aria-hidden="true"></i></a>
+                        <a href="https://www.twitter.com/" target="_blank" class="foot-twitter hvr-pulse"><i class="fab fa-twitter-square" aria-hidden="true"></i></a>
 
-                        <a href="https://www.linkedin.com/" target="_blank" class="foot-linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/" target="_blank" class="foot-linkedin hvr-pulse"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                     </span>
                 </div>
             </div>
@@ -98,7 +98,7 @@
             <!--Copyright Column-->
             <div class="row">
                 <div class="col-lg-12 copyright">
-                    <h6 id="copy"><a href="https://ifti-khan.github.io/ifti-khan-milestone-project-1/" target="_blank">&copy;ifti khan 2020</a></h6>
+                    <h6 id="copy"><a href="https://ifti-khan.github.io/ifti-khan-milestone-project-1/" class="hvr-sweep-to-top hvr-pulse" target="_blank">&copy;ifti khan 2020</a></h6>
                 </div>
             </div>
         </div>
@@ -107,7 +107,7 @@
     <!--This line of code below is for the back to top button. when a user scrolls down if will appear in the bottom right just above the footer. I achieved this by a mix of html, css and javascript-->
 
     <!--Back to top button-->
-    <a id="to-top-btn"><i class="fas fa-angle-double-up" aria-hidden="true"></i></a>
+    <a id="to-top-btn" class="hvr-sweep-to-top hvr-pulse"><i class="fas fa-angle-double-up" aria-hidden="true"></i></a>
 
 </body>
 
