mod: media query done for main section index page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <main>
         <div class="container-fluid main-con">
             <div class="row">
-                <div class="col-lg-4 step-one">
+                <div class="col-12 col-lg-4 step-one">
                     <h2>step one</h2>
                     <h6>select a country</h6>
 
@@ -89,7 +89,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 step-two">
+                <div class="col-12 col-lg-4 step-two">
                     <h2>step two</h2>
                     <h6>type a city or town</h6>
 
@@ -99,12 +99,12 @@
 
                 </div>
 
-                <div class="col-lg-4 step-three">
+                <div class="col-12 col-lg-4 step-three">
                     <h2>step three</h2>
                     <h6>choose a trade</h6>
 
                     <div class="row">
-                        <div class="col-lg-6 left-options">
+                        <div class="col-6 col-lg-6 left-options">
                             <input type="checkbox" id="electrician" name="electrician" value="electrician">
                             <label for="electrician">electrician</label><br>
 
@@ -115,7 +115,7 @@
                             <label for="car_repair">Mechanic</label><br>
                         </div>
 
-                        <div class="col-lg-6 right-options">
+                        <div class="col-6 col-lg-6 right-options">
                             <input type="checkbox" id="locksmith" name="locksmith" value="locksmith">
                             <label for="locksmith">locksmith</label><br>
 
