mod: changed map position and results, input fields now work

--- a/index.html
+++ b/index.html
@@ -126,40 +126,28 @@
         </div>
     </main>
 
+    <div class="container-fluid gmaps-con">
+        <div class="row gmaps-row">
+            <div class="col-lg-12 gmaps-column">
 
-    <div class="hotel-search">
-        <div id="findhotels">Find hotels in:</div>
+                <div id="map"></div>
 
-        <div id="locationField">
-            <input id="autocomplete" placeholder="Enter a city" type="text" />
-        </div>
-
-        <div id="controls">
-            <select id="country">
-                <option value="all" selected>All</option>
-                <option value="au">Australia</option>
-                <option value="br">Brazil</option>
-                <option value="ca">Canada</option>
-                <option value="fr">France</option>
-                <option value="de">Germany</option>
-                <option value="mx">Mexico</option>
-                <option value="nz">New Zealand</option>
-                <option value="it">Italy</option>
-                <option value="za">South Africa</option>
-                <option value="es">Spain</option>
-                <option value="pt">Portugal</option>
-                <option value="us">U.S.A.</option>
-                <option value="uk">United Kingdom</option>
-            </select>
+            </div>
         </div>
     </div>
 
-    <div id="map"></div>
+    <div class="container-fluid gmaps-res-con">
+        <div class="row gmaps-res-row">
+            <div class="col-lg-12 gmaps-res-column">
 
-    <div id="listing">
-        <table id="resultsTable">
-            <tbody id="results"></tbody>
-        </table>
+                <div id="listing">
+                    <table id="resultsTable">
+                        <tbody id="results"></tbody>
+                    </table>
+                </div>
+
+            </div>
+        </div>
     </div>
 
     <div style="display: none">
@@ -188,6 +176,7 @@
             </table>
         </div>
     </div>
+
 
 
 
