--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <!--This block of code below is for the Bootstrap collapsable Navigation bar, which contains the websites main heading, nav bar and dark theme mode. I have left the default bootstrap classes in place so save code space, readability and also because they are called in the bootstrap JS file. I have manipulated this block of code to my liking with my own style in the style.css and media queries file-->
 
     <!--Bootstrap Collapsable Navigation Bar-->
-    <nav class="navbar navbar-expand-lg bg-light navbar-light sticky-top">
+    <nav class="navbar navbar-expand-lg bg-light navbar-light">
         <!--Main Site Header with link to homepage-->
-        <a class="main-heading navbar-brand hvr-sweep-to-top" href="index.html">"Hey, I Know Someone"</a>
+        <a class="main-heading navbar-brand hvr-sweep-to-bottom" href="index.html">"Hey, I Know Someone"</a>
 
         <!--Toggle Button/ Navigation Bar Collapse is being called from the Bootstrap JS file using the data attribute-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -37,18 +37,18 @@
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active-nav hvr-sweep-to-top hvr-pulse" href="index.html">Home</a>
+                    <a class="nav-link active-nav hvr-sweep-to-bottom hvr-pulse" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link hvr-sweep-to-top hvr-pulse" href="locals.html">Locals</a>
+                    <a class="nav-link hvr-sweep-to-bottom hvr-pulse" href="locals.html">Locals</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link hvr-sweep-to-top hvr-pulse" href="contact.html">Contact</a>
+                    <a class="nav-link hvr-sweep-to-bottom hvr-pulse" href="contact.html">Contact</a>
                 </li>
 
                 <!--This list item is for my dark theme mode and is linked to my JS file. So if a user clicks on the list item it will change the body colour to a darker colour and also change the button from default to dark mode on and off if clicked again-->
                 <li class="nav-item">
-                    <a class="nav-link hvr-sweep-to-top hvr-pulse" id="dark-btn" onclick="darkTheme()" href="#">Dark Mode<br> On</a>
+                    <a class="nav-link hvr-sweep-to-bottom hvr-pulse" id="dark-btn" onclick="darkTheme()" href="#">Dark Mode<br> On</a>
                 </li>
 
             </ul>
@@ -132,11 +132,7 @@
         <div class="row no-gutters gmaps-res-row">
             <div class="col-12 col-lg-12 gmaps-res-column">
 
-                <div id="listing">
-                    <table id="resultsTable">
-                        <tbody id="results"></tbody>
-                    </table>
-                </div>
+                <div class="result-con" id="results"></div>
 
             </div>
         </div>
@@ -180,8 +176,8 @@
                 <!--Quick Links Column-->
                 <div class="col-lg-3 quick-links">
                     <h5 id="quick-links-heading">quick links</h5>
-                    <h6 id="localsearch-link"><a href="locals.html" class="hvr-sweep-to-top hvr-pulse">Local Search <i class="fas fa-search" aria-hidden="true"></i></a></h6>
-                    <h6 id="contactme-link"><a href="contact.html" class="hvr-sweep-to-top hvr-pulse">Contact Me <i class="fas fa-envelope" aria-hidden="true"></i></a></h6>
+                    <h6 id="localsearch-link"><a href="locals.html" class="hvr-sweep-to-bottom hvr-pulse">Local Search <i class="fas fa-search" aria-hidden="true"></i></a></h6>
+                    <h6 id="contactme-link"><a href="contact.html" class="hvr-sweep-to-bottom hvr-pulse">Contact Me <i class="fas fa-envelope" aria-hidden="true"></i></a></h6>
                 </div>
 
                 <!--Two Empty Space Columns-->
@@ -203,7 +199,7 @@
             <!--Copyright Column-->
             <div class="row">
                 <div class="col-lg-12 copyright">
-                    <h6 id="copy"><a href="https://ifti-khan.github.io/ifti-khan-milestone-project-1/" class="hvr-sweep-to-top hvr-pulse" target="_blank">&copy;ifti khan 2020</a></h6>
+                    <h6 id="copy"><a href="https://ifti-khan.github.io/ifti-khan-milestone-project-1/" class="hvr-sweep-to-bottom hvr-pulse" target="_blank">&copy;ifti khan 2020</a></h6>
                 </div>
             </div>
         </div>
@@ -225,7 +221,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <!--Google API Files-->
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBY5zt-488Aq3MH-93TXudTj4sCSoa5N6o&callback=initMap&libraries=places&v=weekly" defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBY5zt-488Aq3MH-93TXudTj4sCSoa5N6o&callback=initMap&libraries=places,geometry&v=weekly" defer></script>
 <!--My JS Files-->
 <script src="assets/js/script.js"></script>
 <script src="assets/js/googlemaps.js"></script>
