mod: gmap js popup window sorted and styled, fix: tablet nav position in center

--- a/index.html
+++ b/index.html
@@ -141,25 +141,25 @@
     <div class="pop-up-con">
         <div id="info-content">
             <table>
-                <tr id="iw-url-row" class="iw_table_row">
-                    <td id="iw-icon" class="iw_table_icon"></td>
-                    <td id="iw-url"></td>
+                <tr class="popUp-table-row">
+                    <td id="popUp-icon" class="popUp-table-icon"><i class="fas fa-toolbox"></i></td>
+                    <td id="popUp-url-name" class="hvr-sweep-to-bottom"></td>
                 </tr>
-                <tr id="iw-address-row" class="iw_table_row">
-                    <td class="iw_attribute_name">Address:</td>
-                    <td id="iw-address"></td>
+                <tr id="popUp-address-row" class="popUp-table-row">
+                    <td class="popUp-attrib-name">Address:</td>
+                    <td id="popUp-address"></td>
                 </tr>
-                <tr id="iw-phone-row" class="iw_table_row">
-                    <td class="iw_attribute_name">Telephone:</td>
-                    <td id="iw-phone"></td>
+                <tr id="popUp-phone-row" class="popUp-table-row">
+                    <td class="popUp-attrib-name">Telephone:</td>
+                    <td id="popUp-phone"></td>
                 </tr>
-                <tr id="iw-rating-row" class="iw_table_row">
-                    <td class="iw_attribute_name">Rating:</td>
-                    <td id="iw-rating"></td>
+                <tr id="popUp-rating-row" class="popUp-table-row">
+                    <td class="popUp-attrib-name">Rating:</td>
+                    <td id="popUp-rating"></td>
                 </tr>
-                <tr id="iw-website-row" class="iw_table_row">
-                    <td class="iw_attribute_name">Website:</td>
-                    <td id="iw-website"></td>
+                <tr id="popUp-website-row" class="popUp-table-row">
+                    <td class="popUp-attrib-name">Website:</td>
+                    <td id="popUp-website"></td>
                 </tr>
             </table>
         </div>
