--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div id="info-content">
             <table>
                 <tr class="popUp-table-row">
-                    <td id="popUp-icon" class="popUp-table-icon"><i class="fas fa-tools"></i></td>
+                    <td id="popUp-icon" class="popUp-table-icon"><i id="defaultIcon" class="fas fa-tools"></i></td>
                     <td id="popUp-url-name" class="hvr-sweep-to-bottom"></td>
                 </tr>
                 <tr id="popUp-address-row" class="popUp-table-row">
