mod: gmaps js commenting done, mod: gmaps popup window html and js function

--- a/index.html
+++ b/index.html
@@ -139,27 +139,27 @@
     </div>
 
     <div class="pop-up-con">
-        <div id="info-content">
+        <div id="gmaps-popup-content">
             <table>
                 <tr class="popUp-table-row">
                     <td id="popUp-icon" class="popUp-table-icon"><i id="defaultIcon" class="fas fa-tools"></i></td>
-                    <td id="popUp-url-name" class="hvr-sweep-to-bottom"></td>
+                    <td id="popUp-name"></td>
                 </tr>
                 <tr id="popUp-address-row" class="popUp-table-row">
-                    <td class="popUp-attrib-name">Address:</td>
+                    <td class="popUp-attrib-name">Address:&nbsp;</td>
                     <td id="popUp-address"></td>
                 </tr>
                 <tr id="popUp-phone-row" class="popUp-table-row">
-                    <td class="popUp-attrib-name">Telephone:</td>
+                    <td class="popUp-attrib-name">Telephone:&nbsp;</td>
                     <td id="popUp-phone"></td>
                 </tr>
                 <tr id="popUp-rating-row" class="popUp-table-row">
-                    <td class="popUp-attrib-name">Rating:</td>
+                    <td class="popUp-attrib-name">Rating:&nbsp;</td>
                     <td id="popUp-rating"></td>
                 </tr>
                 <tr id="popUp-website-row" class="popUp-table-row">
-                    <td class="popUp-attrib-name">Website:</td>
-                    <td id="popUp-website"></td>
+                    <td class="popUp-attrib-name">Website:&nbsp;</td>
+                    <td id="popUp-website"><a href="" id="popUpUrl" target="_blank" class="hvr-sweep-to-bottom"></a></td>
                 </tr>
             </table>
         </div>
