mod: result container show and hide js done, styled and responsive

--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
     <div class="container-fluid gmaps-res-con">
         <div class="row no-gutters gmaps-res-row">
             <div class="col-12 col-lg-12 gmaps-res-column">
-
+                <h4 class="result-heading-show hvr-sweep-to-bottom">Show Results <i class="fas fa-chevron-down"></i></h4>
+                <h4 class="result-heading-hide hvr-sweep-to-bottom">Hide Results <i class="fas fa-chevron-up"></i></h4>
                 <div class="result-con" id="results"></div>
 
             </div>
