--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 <!--This list item is for my dark theme mode and is linked to my JS file. So if a user clicks on the list item it will change the body colour to a darker colour and also change the button from default to dark mode on and off if clicked again-->
                 <li class="nav-item">
-                    <a class="nav-link hvr-sweep-to-bottom hvr-pulse" id="dark-btn" onclick="darkTheme()" href="#">Dark Mode<br> On</a>
+                    <a class="nav-link hvr-sweep-to-bottom" id="dark-btn" onclick="darkTheme()" href="#">Dark Mode<br> On</a>
                 </li>
 
             </ul>
@@ -64,7 +64,7 @@
                     <h6>select a country</h6>
 
                     <div id="controls">
-                        <select id="country-list">
+                        <select id="country-list" required>
                             <option value="all" selected>All</option>
                             <option value="au">Australia</option>
                             <option value="ca">Canada</option>
