mod: all mods done to gmap popup info window

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
     <div class="container-fluid gmaps-res-con">
         <div class="row no-gutters gmaps-res-row">
             <div class="col-12 col-lg-12 gmaps-res-column">
-                <h4 class="result-heading-show hvr-sweep-to-bottom">Show Results <i class="fas fa-chevron-down"></i></h4>
-                <h4 class="result-heading-hide hvr-sweep-to-bottom">Hide Results <i class="fas fa-chevron-up"></i></h4>
+                <h5 class="col-lg-12 result-heading-show hvr-sweep-to-bottom">Show Results <i class="fas fa-chevron-down"></i></h5>
+                <h5 class="col-lg-12 result-heading-hide hvr-sweep-to-bottom">Hide Results <i class="fas fa-chevron-up"></i></h5>
                 <div class="result-con" id="results"></div>
 
             </div>
@@ -160,7 +160,7 @@
                 </tr>
                 <tr id="popUp-website-row" class="popUp-table-row">
                     <td class="popUp-attrib-name">Website:&nbsp;</td>
-                    <td id="popUp-website"><a href="" id="popUpUrl" target="_blank" class="hvr-sweep-to-bottom"></a></td>
+                    <td id="popUp-website"><a href="" id="popUpUrl" target="_blank">Click To Visit Website</a></td>
                 </tr>
             </table>
         </div>
